Fix capitalization error

--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
+  <title>chrystals</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link href="https://fonts.googleapis.com/css2?family=Karma&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@700&display=swap" rel="stylesheet">
-  <title>chrystals</title>
 </head>
 
 
@@ -38,7 +38,7 @@
       <img class="share" src="images/share.svg" alt="Share"></a>
         </div>
       </li>
-      <li class="Gem">
+      <li class="gem">
         <img class="products" src="images/gem.svg" alt="Gem">
         <h2>Gem</h2>
         <p>Lots of bright, wonderful colours—and shapes.</p>
